--- a/scss/index.css
+++ b/scss/index.css
@@ -1,24 +1,6 @@
 @charset "UTF-8";
 .main {
-  padding: 130px 0 115px;
-  background-color: #e5e5dc;
-  position: relative;
-  margin-top: -40px; }
-  .main:before, .main:after {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 15px;
-    left: 0;
-    top: 0;
-    background-image: url(../images/wave1.png);
-    background-size: 100% 100%;
-    pointer-events: none; }
-  .main:after {
-    background-image: url(../images/wave2.png);
-    bottom: 0;
-    top: unset; }
+  position: relative; }
   .main__bg {
     height: 100%;
     width: auto;
@@ -27,30 +9,92 @@
     right: 0;
     top: 0; }
   .main__inner {
-    max-width: 520px;
     position: relative;
-    z-index: 2; }
+    z-index: 2;
+    padding: 0 30px; }
+  .main__slider {
+    position: relative; }
+    .main__slider .swiper-slide {
+      background-color: #e5e5dc;
+      position: relative;
+      padding-left: 90px; }
+      .main__slider .swiper-slide:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 15px;
+        right: 0;
+        background-image: url(../images/wave2.png);
+        bottom: 0;
+        background-size: 100% 100%;
+        pointer-events: none; }
+    .main__slider-item {
+      position: relative;
+      z-index: 2;
+      padding: 100px 0 120px; }
+    .main__slider .swiper-container {
+      overflow-x: hidden; }
+    .main__slider-prev, .main__slider-next {
+      width: 46px;
+      height: 46px;
+      margin-left: 8px;
+      margin-left: 8px;
+      border-radius: 50%;
+      z-index: 3;
+      outline: none !important;
+      top: -230px; }
+      .main__slider-prev:after, .main__slider-next:after {
+        display: none; }
+      .main__slider-prev.swiper-button-disabled, .main__slider-next.swiper-button-disabled {
+        background-color: #edeae3;
+        opacity: 1; }
+    .main__slider-next {
+      right: 0;
+      transform: translateX(50%); }
+    .main__slider-prev {
+      left: 0;
+      transform: translateX(-50%); }
+    .main__slider-pag {
+      bottom: 30px;
+      width: 100%;
+      position: absolute;
+      display: flex;
+      justify-content: center; }
+    .main__slider .swiper-pagination {
+      position: static;
+      bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .main__slider .swiper-pagination-bullet {
+      width: 10px;
+      height: 10px;
+      background-color: #9ac354;
+      opacity: 1;
+      margin: 0 3px; }
+    .main__slider .swiper-pagination-bullet-active {
+      background-color: #4f924b; }
   .main__title {
     font-size: 46px;
     line-height: 47px;
     font-weight: 500;
     letter-spacing: -0.4px;
-    color: #9ac354; }
+    color: #9ac354;
+    max-width: 430px; }
   .main__subtitle {
     font-size: 30px;
     font-weight: 500;
     letter-spacing: -0.4px;
     color: #b27544;
-    margin-top: 18px; }
+    margin-top: 18px;
+    max-width: 300px; }
   .main__desc {
     font-size: 15px;
     line-height: 22px;
     font-weight: 400;
-    margin-top: 24px; }
-  .main__btn {
-    width: 235px;
-    height: 49px;
-    margin-top: 35px; }
+    margin-top: 24px;
+    max-width: 300px; }
 
 .advantages {
   padding: 30px 0;
@@ -58,7 +102,8 @@
   .advantages__items {
     display: flex;
     align-items: center;
-    justify-content: space-between; }
+    justify-content: space-between;
+    padding: 0 30px; }
   .advantages__item {
     display: flex;
     align-items: center;
@@ -91,6 +136,7 @@
     margin-top: 16px; }
   .catalog-index__items {
     margin-top: 45px;
+    margin-bottom: 21px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 10px; }
@@ -154,8 +200,6 @@
       color: #212121;
       max-width: 110px;
       margin: 0 auto; }
-  .catalog-index .search-block {
-    margin-top: 21px; }
 
 .search-block {
   height: 98px;
@@ -193,7 +237,7 @@
     z-index: 1;
     width: 100%;
     height: 15px;
-    left: 0;
+    right: 0;
     top: 0;
     background-image: url(../images/wave1.png);
     background-size: 100% 100%;
@@ -259,7 +303,7 @@
     z-index: 1;
     width: 100%;
     height: 15px;
-    left: 0;
+    right: 0;
     bottom: 0;
     background-image: url(../images/wave2.png);
     background-size: 100% 100%;
@@ -297,6 +341,12 @@
       background-color: #9ac354;
       opacity: 0;
       transition: all .3s; }
+    .collection__title--black {
+      color: #252525;
+      font-size: 26px;
+      padding-bottom: 0;
+      pointer-events: none;
+      font-weight: 500; }
     .collection__title--prod {
       color: #b27544; }
       .collection__title--prod:before {
@@ -362,7 +412,19 @@
   background-position: left bottom;
   background-image: url(../images/svg/about-image.jpg);
   background-repeat: no-repeat;
-  background-size: 580px auto; }
+  background-size: 580px auto;
+  position: relative; }
+  .info:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 15px;
+    right: 0;
+    bottom: 0;
+    background-image: url(../images/wave3.png);
+    background-size: 100% 100%;
+    pointer-events: none; }
   .info__inner {
     display: flex;
     padding-left: 190px; }
@@ -395,17 +457,17 @@
     margin-top: 5px; }
 
 @media screen and (max-width: 1240px) {
-  .main {
-    padding: 60px 0 50px; }
-    .main__title {
-      font-size: 40px;
-      line-height: 41px; }
-    .main__subtitle {
-      font-size: 25px; }
-    .main__desc {
-      font-size: 14px; }
-    .main__inner {
-      max-width: 485px; }
+  .main__title {
+    font-size: 40px;
+    line-height: 41px; }
+  .main__subtitle {
+    font-size: 25px; }
+  .main__desc {
+    font-size: 14px; }
+  .main__slider-item {
+    padding: 50px 0 70px; }
+  .main__slider-prev, .main__slider-next {
+    top: -170px; }
 
   .advantages__item {
     width: calc(33.33% - 10px); }
@@ -431,32 +493,60 @@
       margin-right: 30px; } }
 @media screen and (max-width: 992px) {
   .main {
-    padding: 35px 0;
-    margin-top: -9px;
     overflow-x: hidden; }
-    .main:before, .main:after {
-      height: 9px;
-      width: 990px; }
+    .main__inner {
+      padding: 0; }
     .main__title {
-      font-size: 22px;
-      line-height: 25px; }
+      font-size: 20px;
+      line-height: 23px;
+      max-width: 200px; }
     .main__subtitle {
-      font-size: 16px;
-      line-height: 20px;
-      margin-top: 10px; }
+      font-size: 13px;
+      line-height: 15px;
+      margin-top: 10px;
+      max-width: 120px; }
     .main__desc {
-      font-size: 12px;
-      line-height: 16px;
-      margin-top: 15px; }
+      display: none; }
     .main__btn {
       width: 172px;
       height: 36px;
       margin-top: 15px; }
+    .main .swiper-slide {
+      padding: 0; }
+      .main .swiper-slide:after {
+        height: 9px;
+        width: 990px; }
+    .main .swiper-pagination {
+      height: 15px;
+      background-color: #ffffff;
+      border-radius: 7.5px;
+      padding: 0 7px; }
+    .main__slider {
+      overflow-x: hidden; }
+      .main__slider-item {
+        padding-bottom: 100px;
+        padding-left: 20px; }
+      .main__slider-pag {
+        bottom: 20px;
+        align-items: center;
+        height: 34px; }
+      .main__slider .swiper-pagination-bullet {
+        width: 7px;
+        height: 7px;
+        margin: 0 2px; }
+      .main__slider-prev, .main__slider-next {
+        width: 34px;
+        height: 34px;
+        position: static;
+        transform: translate(0, 0);
+        margin: 0 16px; }
 
   .advantages {
     padding: 0 0 20px; }
     .advantages__items {
-      display: block; }
+      display: block;
+      padding-left: 0;
+      padding-right: 0; }
     .advantages__item {
       width: 100%;
       margin-top: 16px; }
@@ -472,7 +562,8 @@
     .catalog-index__items {
       grid-template-columns: 1fr 1fr 1fr;
       gap: 28px 5px;
-      margin-top: 37px; }
+      margin-top: 37px;
+      margin-bottom: 16px; }
     .catalog-index__item {
       height: 154px;
       padding-top: 102px; }
@@ -491,8 +582,6 @@
     .catalog-index__subtitle {
       font-size: 10px;
       margin-top: 12px; }
-    .catalog-index .search-block {
-      margin-top: 16px; }
 
   .search-block {
     padding: 0 14px;
@@ -571,6 +660,9 @@
   .info {
     padding: 37px 0 40px;
     background-image: none; }
+    .info:after {
+      height: 9px;
+      width: 990px; }
     .info__inner {
       display: block;
       padding-left: 0; }
@@ -595,19 +687,10 @@
 @media screen and (max-width: 768px) {
   .main {
     padding-top: 0; }
-    .main__bg {
-      position: static;
-      width: 330px;
-      height: auto;
-      display: block;
-      margin-left: auto; }
-    .main__inner {
-      padding-top: 23px; } }
+    .main .container {
+      padding: 0;
+      width: 100%; } }
 @media screen and (max-width: 576px) {
-  .main__bg {
-    width: calc(100% + 50px);
-    margin-left: -50px; }
-
   .catalog-index__items {
     grid-template-columns: 1fr 1fr; } }
 @media screen and (max-width: 400px) {
@@ -615,5 +698,8 @@
     font-size: 13px; }
     .collection__title:not(:last-child) {
       margin-right: 15px; } }
+@media screen and (max-width: 370px) {
+  .main__bg {
+    right: unset; } }
 
 /*# sourceMappingURL=index.css.map */
