--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,192 +1,241 @@
 .footer {
-    background-image: url(../images/footer_bg.png);
-    padding: 85px 0 35px;
-    background-size: 100% 100%;
-    margin-top: -45px;
-    position: relative;
-    z-index: 4;
-    &__inner {
-        display: flex;
-    }
     &__col {
+        width: 160px;
+        position: relative;
         &:nth-child(1) {
-            width: 270px;
-            margin-right: 85px;
+            width: 505px;
             flex-shrink: 0;
-        }
-        &:nth-child(2) {
-            flex-grow: 1;
-        }
-        &:nth-child(3) {
-            width: 68px;
-            flex-shrink: 0;
-            margin-left: 100px;
-            img {
-                width: 100%;
-            }
         }
     }
-    &__nav {
+    &__head {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        font-size: 13px;
-        font-weight: 500;
-        color: #fffbf7;
+        padding-right: 58px;
     }
-    &__privacy {
-        font-size: 11px;
-        line-height: 16px;
-        font-weight: 400;
-        color: #d4beb1;
-    }
-    &__politic {
-        font-size: 11px;
-        font-weight: 400;
-        color: #d3c4bb;
-        margin-top: 21px;
-    }
-    &__contacts {
-        display: flex;
-        margin-top: 27px;
-        &-left {
-            display: flex;
-            align-items: center;
-            margin-right: 35px;
-            height: 21px;
-        }
-        &-right {
-            display: flex;
-        }
-        &-phone {
-            display: flex;
-            align-items: center;
-            font-size: 16px;
-            font-weight: 500;
-            color: #ffffff;
-            margin-right: 25px;
-            svg {
-                width: 12px;
-                margin-right: 15px;
-            }
-            path {
-                fill: #c19d5f;
-            }
-        }
-        &-whatsapp {
-            color: #ffffff;
-            margin-top: 15px;
-            display: flex;
-            align-items: center;
-            svg {
-                width: 13px;
-                margin-right: 14px;
-            }
-            path {
-                fill: #c19d5f;
-            }
-            span {
-                font-size: 14px;
-                font-weight: 500;
-                margin-right: 10px;
-            }
-            i {
-                font-size: 10px;
-                font-weight: 400;
-            }
-        }
-        &-time {
-            font-size: 12px;
-            font-weight: 400;
-            color: #ffffff;
-            display: flex;
-            align-items: center;
-            height: 13px;
-            margin-left: 5px;
-            svg {
-                width: 13px;
-                margin-right: 11px;
-            }
-            path {
-                fill: #c19d5f;
-            }
-        }
-    }
-    &__instagram {
-        margin-right: 31px;
-        &:hover {
-            path {
-                fill: #c19d5f;
-            }
-        }
+    &__logo {
+        width: 218px;
+        margin-right: 40px;
+        display: block;
+        flex-shrink: 0;
+        img,
         svg {
-            width: 21px;
-        }
-        path {
-            fill: #fff;
+            width: 100%;
         }
     }
-    &__address {
+    &__langs {
+        display: flex;
+    }
+    &__lang {
+        width: 43px;
+        height: 43px;
+        border-radius: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all .3s;
+        background-color: #85ab45;
+        border: 1px solid #a1bfa0;
+        &--active {
+            border: 1px solid #ffffff;
+            background-color: #ffffff;
+            pointer-events: none;
+        }
+        &:hover {
+            border: 1px solid #ffffff;
+            cursor: pointer;
+        }
+        &:not(:last-child) {
+            margin-right: 5px;
+        }
+        img {
+            width: 19px;
+        }
+    }
+    &__title {
+        font-size: 14px;
+        font-weight: 500;
+        color: #ffffff;
+        margin-bottom: 12px;
+    }
+    &__link {
+        font-size: 13px;
+        line-height: 32px;
+        font-weight: 400;
+        color: #d0e1b3;
+        display: block;
+        &:hover {
+            color: #ffffff;
+        }
+    }
+    &__info {
+        margin-top: 40px;
+    }
+    &__address,
+    &__mail,
+    &__phone {
         display: flex;
         align-items: center;
         font-size: 14px;
         font-weight: 400;
-        color: #fffbf7;
-        svg {
-            width: 12px;
-            margin-right: 14px;
-        }
-        path {
-            fill: #c19d5f;
+        color: #ffffff;
+        margin-top: 20px;
+        &:hover {
+            color: #ccf18e;
         }
         i {
-            font-style: normal;
-        }
-        br {
-            display: none;
+            margin-right: 15px;
+            width: 13px;
+            display: flex;
+            justify-content: center;
+            flex-shrink: 0;
         }
     }
-    &__ooo {
-        margin-top: 3px;
+    &__address {
+        pointer-events: none;
+        padding-right: 58px;
+    }
+    &__phone {
+        margin-top: 0;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    &__phones {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+    }
+    &__whatsapp {
+        display: flex;
+        align-items: center;
+        margin-left: 16px;
+        color: #ffffff;
+        &:hover {
+            color: #ccf18e;
+        }
+        strong {
+            margin: 0 15px;
+            font-weight: 500;
+            font-size: 16px;
+        }
+        span {
+            font-size: 12px;
+            color: #ddebc4;
+        }
+        i {
+            width: 3px;
+            height: 3px;
+            background-color: #9aca97;
+            display: block;
+        }
+    }
+    &__socials {
+        position: absolute;
+        right: 0;
+        top: 0;
+        &-item {
+            width: 48px;
+            height: 48px;
+            background-color: #678b2b;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 7px;
+            &:hover {
+                background-color: #466413;
+            }
+        }
+    }
+    &__privacy {
+        font-size: 12px;
+        font-weight: 400;
+        color: #c1d2a5;
+    }
+    &__by {
         font-size: 10px;
         font-weight: 400;
-        color: #aa988d;
-    }
-}
-
-@media screen and (max-width: 1300px) {
-    .footer {
-        &__col {
-            &:nth-child(1) {
-                margin-right: 30px;
-            }
-            &:nth-child(3) {
-                margin-left: 30px;
-            }
+        color: #c1d2a5;
+        margin-top: 10px;
+        a:hover {
+            color: #ffffff;
         }
     }
 }
 
-@media screen and (max-width: 1200px) {
+.footer-top {
+    background-color: #85ab45;
+    position: relative;
+    padding: 40px 0;
+    &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 15px;
+        right: 0;
+        bottom: 0;
+        background-image: url(../images/wave4.png);
+        background-size: 100% 100%;
+        pointer-events: none;
+    }
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.footer-bottom {
+    background-color: #678b2b;
+    padding: 25px 0;
+    &__inner {
+        display: flex;
+    }
+    &__info {
+        display: flex;
+        align-items: center;
+    }
+    &__link {
+        font-size: 12px;
+        font-weight: 400;
+        color: #cbdeaa;
+        display: block;
+        &:not(:last-child) {
+            margin-right: 25px;
+        }
+        &:hover {
+            color: #ffffff;
+        }
+    }
+}
+
+@media screen and (max-width: 1240px) {
     .footer {
         &__col {
             &:nth-child(1) {
-                margin-right: 20px;
-                width: 200px;
-                br {
-                    display: none;
-                }
-            }
-            &:nth-child(3) {
-                margin-left: 20px;
+                width: 350px;
             }
         }
-        &__instagram {
-            margin-right: 15px;
+        &__head {
+            display: block;
         }
-        &__contacts {
-            &-left {
-                margin-right: 15px;
+        &__logo {
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+        &__address {
+            padding-right: 0;
+        }
+        &__phones {
+            display: block;
+        }
+        &__whatsapp {
+            margin-top: 20px;
+            margin-left: 28px;
+            strong {
+                margin-left: 0;
+            }
+            i {
+                display: none;
             }
         }
     }
@@ -194,124 +243,121 @@
 
 @media screen and (max-width: 992px) {
     .footer {
-        margin-top: -55px;
-        padding: 45px 0 20px;
-        background-size: 1400px 100%;
-        background-position: right top;
-        &__nav {
-            display: none;
-        }
         &__col {
+            display: none;
+            position: static;
             &:nth-child(1) {
-                margin-right: 0;
+                display: block;
                 width: 100%;
             }
-            &:nth-child(2) {
-                order: -1;
-                width: 100%;
+        }
+        &__head {
+            display: flex;
+            padding-right: 0;
+        }
+        &__logo {
+            margin-right: 40px;
+            margin-bottom: 0;
+        }
+        &__info {
+            margin-top: 0;
+        }
+        &__address,
+        &__mail,
+        &__phone {
+            font-size: 12px;
+            i {
+                margin-right: 10px;
             }
-            &:nth-child(3) {
-                margin-left: 0;
-                width: 100%;
-                img {
-                    position: absolute;
-                    right: 0;
-                    bottom: 10px;
-                    width: 60px;
+        }
+        &__phone {
+            font-size: 14px;
+        }
+        &__phones {
+            padding-right: 80px;
+        }
+        &__whatsapp {
+            margin-top: 9px;
+            display: block;
+            margin-left: 23px;
+            strong {
+                font-size: 14px;
+            }
+            span {
+                display: block;
+                margin-top: 6px;
+                font-size: 10px;
+            }
+        }
+        &__socials {
+            bottom: 15px;
+            top: unset;
+            display: flex;
+            align-items: center;
+            &-item {
+                margin-left: 3px;
+                margin-bottom: 0;
+                width: 37px;
+                height: 37px;
+                svg {
+                    height: 15px;
+                    width: auto;
                 }
             }
         }
-        &__inner {
-            flex-wrap: wrap;
-            position: relative;
-        }
-        &__contacts {
-            display: block;
-            &-left {
-                margin-right: 0;
-                margin-bottom: 20px;
-            }
-        }
         &__privacy {
-            margin-top: 20px;
-        }
-        &__politic {
+            font-size: 8px;
             margin-top: 10px;
         }
-        &__ooo {
-            margin-top: 15px;
+        &__by {
+            font-size: 7px;
+            margin-top: 6px;
+        }
+    }
+    .footer-top {
+        padding: 15px 0 27px;
+        &:after {
+            height: 9px;
+            width: 990px;
+        }
+        &__inner {
+            position: relative;
+        }
+    }
+    .footer-bottom {
+        padding: 13px 0;
+        &__inner {
+            flex-wrap: wrap;
+        }
+        &__info {
+            order: -1;
+            display: block;
+        }
+        &__link {
+            font-size: 10px;
+            line-height: 16px;
+            margin-right: 0 !important;
         }
     }
 }
 
 @media screen and (max-width: 768px) {
     .footer {
-        background-size: 900px 100%;
-        &__col {
-            &:nth-child(1) {
-                width: 430px;
+        &__logo {
+            width: 150px;
+            margin-right: 0;
+        }
+        &__langs {
+            margin-left: auto;
+        }
+        &__lang {
+            width: 32px;
+            height: 32px;
+            &:not(:last-child) {
+                margin-right: 3px;
             }
-            &:nth-child(3) {
-                margin-left: 0;
-                img {
-                    position: absolute;
-                    right: 0;
-                    bottom: 0px;
-                    width: 60px;
-                }
-            }
-        }
-        &__ooo {
-            width: 430px;
-            font-size: 8px;
-            line-height: 12px;
-        }
-        &__contacts {
-            &-phone {
-                font-size: 14px;
-            }
-            &-time {
-                margin-top: 2px;
-            }
-        }
-        &__privacy {
-            font-size: 10px;
-            line-height: 16px;
-        }
-        &__politic {
-            font-size: 9px;
-        }
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .footer {
-        background-size: 700px 100%;
-        &__address {
-            font-size: 14px;
-            line-height: 18px;
-            align-items: flex-start;
-            svg {
-                margin-top: 3px;
-            }
-            br {
-                display: unset;
-            }
-        }
-        &__instagram {
-            margin-top: -8px;
-        }
-        &__col {
-            &:nth-child(1) {
-                width: 230px;
-            }
-        }
-        &__ooo {
-            width: 230px;
-        }
-        &__contacts {
-            &-time {
-                margin-left: -15px;
+            img {
+                width: 14px;
             }
         }
     }
