--- a/scss/info.scss
+++ b/scss/info.scss
@@ -1,91 +1,98 @@
 .questions {
-    // &__title {
-    //     font-size: 30px;
-    //     line-height: 47px;
-    //     font-weight: 500;
-    //     text-transform: uppercase;
-    //     color: #4f924b;
-    //     text-align: center;
-    //     margin-top: 48px;
-    //     margin-bottom: 3px;
-    // }
-    // &__nav {
-    //     margin-bottom: 48px;
-    // }
-    // &__list {
-    //     display: flex;
-    //     justify-content: center;
-    //     position: relative;
-    // }
-    // &__list-item:not(:last-child) {
-    //     margin-right: 10px;
-    // }
-    // &__link {
-    //     font-family: Rubik;
-    //     font-size: 10px;
-    //     line-height: 22px;
-    //     font-weight: 400;
-    //     color: #383838;
-    // }
+    border-top: 1px solid #ebe9e3;
+    margin-top: 10px;
+    padding: 40px 0 80px;
+    position: relative;
+    &:after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        height: 15px;
+        right: 0;
+        bottom: 0;
+        background-image: url(../images/wave3.png);
+        background-size: 100% 100%;
+        pointer-events: none;
+    }
     &__inner {
         display: flex;
-        margin-top: 48px;
     }
     &__left {
-        width: 801px;
+        flex-grow: 1;
     }
     &__left-title {
-        font-family: Rubik;
         font-size: 22px;
         font-weight: 500;
         color: #121212;
         margin-bottom: 24px;
     }
-    &__items:not(:last-child) {
-        margin-bottom: 36px;
+    &__items {
+        border-top: 1px solid #e9e7e1;
+        padding-top: 35px;
+        &:nth-child(1) {
+            border-top: none;
+            padding-top: 0;
+        }
+        &:not(:last-child) {
+            margin-bottom: 36px;
+        }
     }
     &__item {
-        width: 801px;
         cursor: pointer;
-    }
-    &__item:not(:last-child) {
-        margin-bottom: 5px;
-    }
-    &__item-show {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        background-color: #ffffff;
-        border: 1px solid #e9e7e1;
-        padding: 19px 22px 19px 28px;
-        &:hover {
+        &:not(:last-child) {
+            margin-bottom: 5px;
+        }
+        &-show {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
             background-color: #ffffff;
-            border: 1px solid #4f924b;
-            .questions__item-title {
-                color: #4f924b;
-            }
-            .questions__item-btn {
+            border: 1px solid #e9e7e1;
+            padding: 15px 28px;
+            &:hover {
+                background-color: #ffffff;
                 border: 1px solid #4f924b;
-                path {
-                    fill: #50924c;
+                .questions__item-title {
+                    color: #4f924b;
+                }
+                .questions__item-btn {
+                    border: 1px solid #4f924b;
+                    path {
+                        fill: #50924c;
+                    }
                 }
             }
         }
-    }
-    &__item-title {
-        font-family: Rubik;
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 400;
-        color: #171717;
-    }
-    &__item-btn {
-        width: 11px;
-        height: 11px;
-        border: 1px solid #e9e7e1;
-        padding: 5px;
-        transition: all 0.3s;
+        &-title {
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #171717;
+        }
+        &-btn {
+            width: 11px;
+            height: 11px;
+            border: 1px solid #e9e7e1;
+            padding: 5px;
+            transition: all 0.3s;
+        }
+        &-hide {
+            display: none;
+            padding: 26px 30px;
+        }
+        &-hide-inner {
+            display: flex;
+        }
+        &-icon {
+            margin-right: 23px;
+            flex-shrink: 0;
+            svg {
+                width: 13px;
+                height: 20px;
+            }
+        }
     }
     &__item--active {
         & .questions__item-show {
@@ -125,53 +132,21 @@
             }
         }
     }
-    &__item-hide {
-        display: none;
-        padding: 26px 54px 32px 29px;
-    }
-    &__item-hide-hide {
-        display: flex;
-    }
-    &__hide-icon {
-        margin-right: 23px;
-        flex-shrink: 0;
-        svg {
-            width: 13px;
-            height: 20px;
-        }
-    }
-    &__hide-text {
-        p {
-            margin-bottom: 10px;
-            font-family: Rubik;
-            font-size: 14px;
-            line-height: 20px;
-            font-weight: 400;
-            color: #1a1a1a;
-        }
-        div {
-            p {
-                font-size: 15px;
-                line-height: 28px;
-                font-weight: 500;
-            }
-            li:not(:last-child) {
-                margin-bottom: 10px;
-            }
-            li {
-                display: flex;
-                align-items: center;
-                span {
-                    font-size: 14px;
-                    font-weight: 400;
-                    color: #1a1a1a;
-                    margin-left: 10px;
-                }
-            }
-        }
-    }
     &__right {
-        padding-left: 80px;
+        margin-left: 80px;
+        width: 285px;
+        flex-shrink: 0;
+    }
+    &__whatsapp {
+        display: flex;
+        align-items: center;
+        margin-top: 13px;
+        span {
+            font-size: 12px;
+            font-weight: 400;
+            color: #404040;
+            margin-left: 10px;
+        }
     }
     &__unknown {
         display: flex;
@@ -181,24 +156,19 @@
             width: 51px;
             height: 51px;
         }
-        div {
-            span {
-                display: block;
-            }
-            span:nth-child(1) {
-                font-family: Rubik;
-                font-size: 16px;
-                line-height: 22px;
-                font-weight: 400;
-                color: #4f924b;
-            }
-            span:nth-child(2) {
-                font-family: Rubik;
-                font-size: 20px;
-                line-height: 22px;
-                font-weight: 500;
-                color: #4f924b;
-            }
+        span {
+            font-size: 16px;
+            line-height: 22px;
+            font-weight: 400;
+            color: #4f924b;
+            display: block;
+        }
+        strong {
+            font-size: 20px;
+            line-height: 22px;
+            font-weight: 500;
+            color: #4f924b;
+            display: block;
         }
     }
     &__mail {
@@ -221,7 +191,6 @@
     &__telephone {
         margin-top: 12px;
         p {
-            font-family: Rubik;
             font-size: 14px;
             line-height: 10px;
             font-weight: 400;
@@ -229,41 +198,37 @@
             margin-bottom: 10px;
         }
         a {
-            font-family: Rubik;
             font-size: 17px;
-            line-height: 34px;
+            // line-height: 34px;
             font-weight: 500;
             color: #282828;
         }
-        div {
-            a:nth-child(2) {
-                font-family: Rubik;
-                font-size: 12px;
-                line-height: 30px;
-                font-weight: 400;
-                color: #404040;
-                margin-left: 10px;
-            }
-        }
-    }
-    &__title-left {
-        padding-top: 36px;
-        border-top: 1px solid #e9e7e1;
     }
 }
 
 @media screen and (max-width: 1240px) {
-    .questions__inner {
-        display: block;
-        margin-right: 0;
-        margin-left: 0;
+    .questions {
+        &__right {
+            margin-left: 30px;
+        }
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 992px) {
     .questions {
-        &__left {
+        padding: 18px 0 40px;
+        margin-top: 0px;
+        &:after {
+            height: 9px;
+            width: 990px;
+        }
+        &__inner {
+            display: block;
+        }
+        &__right {
             width: 100%;
+            margin-left: 0;
+            margin-top: 25px;
         }
         &__item {
             width: 100%;
@@ -273,70 +238,26 @@
 
 @media screen and (max-width: 768px) {
     .questions {
-        &__items:not(:last-child) {
-            margin-bottom: 22px;
+        &__items {
+            padding-top: 22px;
+            &:not(:last-child) {
+                margin-bottom: 22px;
+            }
         }
         &__left-title {
             font-size: 16px;
             margin-bottom: 14px;
         }
-        .questions__title-left {
-            padding-top: 22px;
-        }
-        &__item-hide {
-            padding: 19px 23px 24px 19px;
-        }
-        &__item-show {
-            padding: 17px 18px;
-        }
-        &__item-title {
-            font-size: 13px;
-            line-height: 18px;
-        }
-        &__hide-text p {
-            font-size: 12px;
-            line-height: 18px;
-            margin-bottom: 7px;
-        }
-        &__hide-text p span {
-            font-weight: 500;
-        }
-        &__span {
-            font-weight: 500;
-        }
-        &__hide-text div p {
-            font-size: 13px;
-            line-height: 0px;
-            font-weight: 500;
-        }
-        &__hide-text {
-            p {
-                margin-bottom: 10px;
-                font-family: Rubik;
-                font-size: 11px;
-                line-height: 20px;
-                font-weight: 400;
-                color: #1a1a1a;
+        &__item {
+            &-hide {
+                padding: 19px 23px 24px 19px;
             }
-            div {
-                p {
-                    font-size: 15px;
-                    line-height: 28px;
-                    font-weight: 500;
-                }
-                li:not(:last-child) {
-                    margin-bottom: 7px;
-                }
-                li {
-                    display: flex;
-                    align-items: center;
-                    span {
-                        font-size: 13px;
-                        font-weight: 400;
-                        color: #1a1a1a;
-                        margin-left: 10px;
-                    }
-                }
+            &-show {
+                padding: 15px 18px;
+            }
+            &-title {
+                font-size: 13px;
+                line-height: 18px;
             }
         }
         &__right {
@@ -349,13 +270,11 @@
                 height: 42px;
                 margin-right: 18px;
             }
-            div {
-                span:nth-child(1) {
-                    font-size: 14px;
-                }
-                span:nth-child(2) {
-                    font-size: 18px;
-                }
+            span {
+                font-size: 14px;
+            }
+            strong {
+                font-size: 18px;
             }
         }
         &__mail {
@@ -370,11 +289,12 @@
             a {
                 font-size: 16px;
             }
-            div {
-                a:nth-child(2) {
-                    font-size: 11px;
-                    margin-left: 13px;
-                }
+        }
+        &__whatsapp {
+            margin-top: 9px;
+            span {
+                font-size: 11px;
+                margin-left: 13px;
             }
         }
     }
