--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,10 @@
 @import 'footer';
 @import 'popups';
 @import 'info';
+@import 'text';
+@import 'catalog';
+@import 'contacts';
+@import 'search';
 .wrapper {
     margin: 0 auto;
     display: flex;
