--- a/scss/ux.css
+++ b/scss/ux.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 input::placeholder {
   color: #808080; }
 
@@ -57,11 +58,18 @@ input::placeholder {
   background-color: #ffffff;
   border-radius: 5px;
   border: 1px solid transparent;
-  transition: all .3s; }
+  transition: all .3s;
+  position: relative; }
   .card:hover {
     border: 1px solid #9ac354; }
     .card:hover .card__title {
       color: #4f924b; }
+  .card__tag {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    width: 38px;
+    height: auto; }
   .card__img {
     height: 170px;
     display: flex;
@@ -92,19 +100,280 @@ input::placeholder {
   .card--prod:hover .card__title {
     color: #9c6336; }
 
-p {
-  font-size: 14px;
-  line-height: 24px;
-  color: #272727;
-  margin-bottom: 10px; }
-  p strong {
-    font-weight: 500; }
-  p a {
-    text-decoration: underline;
-    color: #4f924b; }
-    p a:hover {
+.card-raw {
+  height: 196px;
+  background-color: #ffffff;
+  border: 1px solid #f0eee9;
+  border-radius: 5px;
+  padding: 30px;
+  display: flex;
+  position: relative;
+  transition: all .3s; }
+  .card-raw:hover {
+    border: 1px solid #b27544; }
+    .card-raw:hover .card-raw__title {
+      color: #b27544; }
+  .card-raw__tag {
+    position: absolute;
+    top: 15px;
+    left: 0;
+    width: 38px;
+    height: auto; }
+  .card-raw__img {
+    height: 150px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 24px;
+    flex-shrink: 0; }
+    .card-raw__img img {
+      max-width: 100%;
+      max-height: 100%; }
+  .card-raw__title {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    color: #272727;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical; }
+  .card-raw__size {
+    font-size: 12px;
+    font-weight: 400;
+    color: #737373;
+    margin-top: 15px; }
+  .card-raw__num {
+    font-size: 10px;
+    font-weight: 400;
+    color: #b0b0b0;
+    position: absolute;
+    right: 20px;
+    bottom: 20px; }
+
+.follow {
+  background-color: #f7f5f0;
+  padding: 25px 0 35px; }
+  .follow__inner {
+    display: flex; }
+  .follow__left {
+    width: 250px;
+    margin-right: 50px;
+    flex-shrink: 0; }
+  .follow__right {
+    flex-grow: 1;
+    height: 91px;
+    background-color: #ffffff;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    padding: 0 40px; }
+  .follow__title {
+    font-size: 26px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #b27544; }
+  .follow__subtitle {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #b27544;
+    margin-top: 12px; }
+  .follow__form {
+    display: flex;
+    align-items: center;
+    position: relative; }
+    .follow__form-success {
+      background-color: #9ac354;
+      border-radius: 2px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      top: 0;
+      left: 0;
+      font-size: 11px;
+      font-weight: 700;
+      color: #ffffff;
+      position: absolute; }
+    .follow__form-group {
+      width: 228px;
+      margin-right: 15px; }
+      .follow__form-group input {
+        width: 100%;
+        height: 37px;
+        background-color: #ffffff;
+        border: 1px solid #d3d2d1;
+        border-radius: 2px;
+        padding: 0 14px;
+        font-size: 13px;
+        font-weight: 400; }
+        .follow__form-group input::placeholder {
+          color: #b6b6b6; }
+      .follow__form-group .input-error {
+        border: 1px solid #ff8a8a;
+        color: #d82d2d;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='Слой_1' data-name='Слой 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10.97 10.97'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:%23e24344;}%3C/style%3E%3C/defs%3E%3Cpath class='cls-1' d='M365,400.25h-.68l-.08,0a5.32,5.32,0,0,1-1.52-.34,5.49,5.49,0,1,1,7.32-6.26c0,.22.07.43.1.65v1c0,.24-.07.49-.12.72a5.48,5.48,0,0,1-4.4,4.18Zm-3.21-1.92a4.54,4.54,0,0,0,6.11-.32,4.6,4.6,0,0,0,.28-6.12Zm5.74-7.12a4.55,4.55,0,0,0-6.38,6.43Z' transform='translate(-359.19 -389.28)'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: right 13px center;
+        background-size: 11px auto;
+        padding-right: 25px; }
+        .follow__form-group .input-error ~ .follow__form-group-error {
+          display: flex; }
+          .follow__form-group .input-error ~ .follow__form-group-error svg {
+            margin-right: 12px; }
+      .follow__form-group-error {
+        display: none;
+        align-items: center;
+        width: calc(100% - 112px);
+        height: 33px;
+        background-color: #e44343;
+        font-size: 12px;
+        font-weight: 400;
+        color: #ffffff;
+        padding: 0 20px;
+        position: absolute;
+        top: 100%;
+        left: -40px;
+        margin-top: 27.5px; }
+    .follow__form-btn {
+      width: 137px;
+      height: 37px;
+      font-size: 10px; }
+  .follow__link {
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+    font-weight: 300;
+    color: #b27544;
+    margin-left: auto;
+    white-space: nowrap; }
+    .follow__link svg {
+      margin-left: 11px; }
+
+.breadcrumbs {
+  padding: 50px 0 25px; }
+  .breadcrumbs__title {
+    text-align: center;
+    font-size: 30px;
+    line-height: 1.2;
+    font-weight: 500;
+    color: #4f924b;
+    text-transform: uppercase; }
+  .breadcrumbs__wrap {
+    margin-top: 17px;
+    text-align: center;
+    flex-wrap: wrap; }
+    .breadcrumbs__wrap a:hover {
+      color: #184515; }
+  .breadcrumbs__item {
+    font-size: 10px;
+    line-height: 22px;
+    font-weight: 400;
+    color: #4f924b;
+    position: relative; }
+    .breadcrumbs__item:not(:first-child) {
+      margin-left: 13px;
+      padding-left: 13px; }
+      .breadcrumbs__item:not(:first-child):before {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        width: 2px;
+        height: 2px;
+        background-color: #4f924b;
+        top: 6px;
+        left: 0; }
+    .breadcrumbs__item:last-child {
+      color: #383838; }
+  .breadcrumbs__back {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 400;
+    color: #3d3d3d; }
+    .breadcrumbs__back:hover {
+      color: #3a7b36; }
+      .breadcrumbs__back:hover strong {
+        color: #3a7b36; }
+    .breadcrumbs__back svg {
+      margin-bottom: 3px; }
+    .breadcrumbs__back span {
+      margin-left: 18px;
+      margin-right: 3px; }
+    .breadcrumbs__back strong {
+      font-size: 18px;
+      color: #4f924b;
+      font-weight: 400;
+      transition: all .3s; }
+
+.breadcrumbs--prod .breadcrumbs__title {
+  color: #b27544; }
+.breadcrumbs--prod .breadcrumbs__wrap a {
+  color: #b27544; }
+  .breadcrumbs--prod .breadcrumbs__wrap a:hover {
+    color: #9c6336; }
+.breadcrumbs--prod .breadcrumbs__back:hover {
+  color: #9c6336; }
+  .breadcrumbs--prod .breadcrumbs__back:hover strong {
+    color: #9c6336; }
+.breadcrumbs--prod .breadcrumbs__back strong {
+  color: #b27544; }
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 45px 0 0; }
+  .pagination__item {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    width: 47px;
+    height: 47px;
+    background-color: #efede5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 3px;
+    transition: all .3s; }
+    .pagination__item:hover {
       background-color: #4f924b;
-      color: #fff; }
+      color: #fff;
+      cursor: pointer; }
+  .pagination__item--active {
+    color: #fff;
+    background-color: #85ab45;
+    pointer-events: none; }
+  .pagination__btn {
+    width: 47px;
+    height: 47px;
+    background-color: #ffffff;
+    border: 1px solid #85ab45;
+    border-radius: 50%;
+    margin-left: 25px; }
+    .pagination__btn:hover {
+      border: 1px solid #4f924b; }
+      .pagination__btn:hover path {
+        fill: #4f924b; }
+    .pagination__btn svg {
+      margin-left: 2px; }
+  .pagination__btn--prev {
+    margin-left: 0;
+    margin-right: 25px; }
+    .pagination__btn--prev svg {
+      margin-right: 2px;
+      margin-left: 0; }
+  .pagination__btn--disabled {
+    border: 1px solid #efede5;
+    pointer-events: none; }
+    .pagination__btn--disabled path {
+      fill: #dcdad7; }
 
 .ccalc {
   display: flex;
@@ -153,99 +422,22 @@ p {
     height: 18px;
     margin-right: 20px; }
 
-.breadcrumbs {
-  padding-top: 15px; }
-  .breadcrumbs__title {
-    text-align: center;
-    font-size: 34px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.06em;
-    color: #663618; }
-  .breadcrumbs__wrap {
-    margin-top: 20px;
-    text-align: center;
-    flex-wrap: wrap; }
-    .breadcrumbs__wrap a:hover {
-      color: #663618; }
-  .breadcrumbs__item {
-    font-size: 12px;
-    line-height: 20px;
-    font-weight: 400;
-    color: #c19d5f;
-    position: relative; }
-    .breadcrumbs__item:not(:first-child) {
-      margin-left: 17px;
-      padding-left: 17px; }
-      .breadcrumbs__item:not(:first-child):before {
-        content: '';
-        position: absolute;
-        z-index: 1;
-        width: 2px;
-        height: 2px;
-        background-color: #c19d5f;
-        top: 7px;
-        left: 0; }
-
-.pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px; }
-  .pagination__item {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    color: #663618;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 5px;
-    transition: all .3s; }
-    .pagination__item:hover {
-      background-color: #c19d5f;
-      color: #fff;
-      cursor: pointer; }
-  .pagination__item--active {
-    color: #fff;
-    background-color: #663618;
-    pointer-events: none; }
-  .pagination__btn {
-    width: 32px;
-    height: 32px;
-    background-color: #ffffff;
-    border: 1px solid #663618;
-    border-radius: 50%;
-    margin-left: 30px; }
-    .pagination__btn:hover {
-      background-color: #c19d5f;
-      border: 1px solid #c19d5f; }
-      .pagination__btn:hover path {
-        fill: #fff; }
-    .pagination__btn path {
-      fill: #663618; }
-    .pagination__btn svg {
-      margin-left: 2px; }
-  .pagination__btn--prev {
-    margin-left: 0;
-    margin-right: 30px; }
-    .pagination__btn--prev svg {
-      transform: rotate(180deg);
-      margin-right: 2px;
-      margin-left: 0; }
-  .pagination__btn--disabled {
-    background-color: #ffffff;
-    border: 1px solid #f1e9db;
-    pointer-events: none; }
-    .pagination__btn--disabled path {
-      fill: #e5e2dd; }
-
 .red-star {
-  color: #c19d5f; }
+  color: #e07b7b; }
 
+@media screen and (max-width: 1240px) {
+  .follow__left {
+    margin-right: 20px; }
+  .follow__right {
+    padding: 0 20px; }
+  .follow__form-group {
+    width: 170px;
+    margin-right: 10px; }
+    .follow__form-group-error {
+      left: -20px;
+      width: calc(100% - 126px); }
+  .follow__link {
+    font-size: 9px; } }
 @media screen and (max-width: 992px) {
   .btn {
     font-size: 9px; }
@@ -258,13 +450,52 @@ p {
       width: 4px;
       height: auto; }
 
-  p {
-    font-size: 12px;
-    line-height: 18px;
-    margin-bottom: 5px; }
+  .follow {
+    padding: 22px 0; }
+    .follow__inner {
+      display: block; }
+    .follow__right {
+      margin-top: 17px; }
+    .follow__title {
+      font-size: 18px; }
+    .follow__subtitle {
+      font-size: 10px;
+      line-height: 14px;
+      margin-top: 7px; }
+    .follow__form-group {
+      width: 190px; }
+
+  .breadcrumbs {
+    padding: 20px 0; }
+    .breadcrumbs__title {
+      font-size: 20px; }
+    .breadcrumbs__wrap {
+      margin-top: 8px; }
+    .breadcrumbs__item {
+      font-size: 8px;
+      line-height: 14px; }
+      .breadcrumbs__item:not(:first-child) {
+        margin-left: 10px;
+        padding-left: 10px; }
+        .breadcrumbs__item:not(:first-child):before {
+          top: 3px; }
 
   .pagination {
-    margin-top: 25px; } }
+    margin-top: 23px; }
+    .pagination__item {
+      width: 31px;
+      height: 31px;
+      font-size: 10px;
+      margin: 0 2px; }
+    .pagination__btn {
+      width: 31px;
+      height: 31px;
+      margin-left: 20px; }
+      .pagination__btn svg {
+        width: 4px; }
+    .pagination__btn--prev {
+      margin-right: 20px;
+      margin-left: 0; } }
 @media screen and (max-width: 768px) {
   .card {
     padding: 14px 13px 20px; }
@@ -278,39 +509,72 @@ p {
     .card__num {
       font-size: 8px;
       margin-top: 10px; }
+    .card__tag {
+      top: 11px; }
+
+  .follow__right {
+    padding: 13px;
+    height: unset;
+    position: relative; }
+  .follow__form {
+    flex-wrap: wrap;
+    width: 100%;
+    position: static; }
+    .follow__form-group {
+      width: calc(50% - 3px);
+      margin-right: 0;
+      margin-bottom: 8px;
+      flex-grow: 1; }
+      .follow__form-group:nth-child(1) {
+        margin-right: 6px;
+        width: calc(42% - 3px); }
+      .follow__form-group-error {
+        width: 100%;
+        left: 0;
+        margin-top: 0;
+        padding: 9px 14px;
+        height: unset;
+        align-items: flex-start; }
+      .follow__form-group input {
+        font-size: 11px; }
+    .follow__form-success {
+      top: 13px;
+      padding: 13px 17px;
+      height: unset;
+      font-size: 10px;
+      line-height: 1; }
+  .follow__link {
+    position: absolute;
+    left: 170px;
+    bottom: 13px;
+    height: 37px;
+    width: calc(100% - 183px);
+    white-space: unset; }
 
   .back-link {
     font-size: 14px; }
     .back-link svg {
       margin-right: 16px;
-      width: 15px; }
-
-  .breadcrumbs__title {
-    font-size: 18px; }
-  .breadcrumbs__wrap {
-    margin-top: 8px; }
-  .breadcrumbs__item {
-    font-size: 9px;
-    line-height: 14px; }
-    .breadcrumbs__item:not(:first-child) {
-      margin-left: 10px;
-      padding-left: 10px; }
-      .breadcrumbs__item:not(:first-child):before {
-        top: 5px; }
-
-  .pagination__item {
-    width: 35px;
-    height: 35px;
-    font-size: 14px;
-    margin: 0 3px; }
-  .pagination__btn {
-    width: 24px;
-    height: 24px;
-    margin-left: 20px; }
-    .pagination__btn svg {
-      width: 4px; }
-  .pagination__btn--prev {
-    margin-right: 20px;
-    margin-left: 0; } }
+      width: 15px; } }
+@media screen and (max-width: 576px) {
+  .card-raw {
+    display: block;
+    height: unset;
+    padding: 15px; }
+    .card-raw__tag {
+      top: 11px; }
+    .card-raw__img {
+      width: 140px;
+      height: 140px;
+      margin-bottom: 10px; }
+    .card-raw__num {
+      display: none; } }
+@media screen and (max-width: 400px) {
+  .follow__link svg {
+    align-self: flex-start;
+    margin-top: 5px;
+    margin-top: 11px; }
+  .follow__link span {
+    width: 65px; } }
 
 /*# sourceMappingURL=ux.css.map */
